Complete search method

--- a/Course2ProblemSet1_Solutions.ipynb
+++ b/Course2ProblemSet1_Solutions.ipynb
@@ -80,6 +80,16 @@
     "        if self.key == key: \n",
     "            return (True, self)\n",
     "        # your code here\n",
+    "        elif key < self.key:\n",
+    "            if self.left == None:\n",
+    "                return (False, self)\n",
+    "            else:\n",
+    "                return self.left.search(key)\n",
+    "        else:\n",
+    "            if self.right == None:\n",
+    "                return (False, self)\n",
+    "            else:\n",
+    "                return self.right.search(key)\n",
     "        \n",
     "    \n",
     "    #TODO: Complete the insert algorithm below\n",
