Complete insert method

--- a/Course2ProblemSet1_Solutions.ipynb
+++ b/Course2ProblemSet1_Solutions.ipynb
@@ -91,7 +91,6 @@
     "            else:\n",
     "                return self.right.search(key)\n",
     "        \n",
-    "    \n",
     "    #TODO: Complete the insert algorithm below\n",
     "    # To insert first search for it and find out\n",
     "    # the parent whose child the currently inserted key will be.\n",
@@ -100,7 +99,11 @@
     "    # return the new node corresponding to the inserted key otherwise.\n",
     "    def insert(self, key):\n",
     "        # your code here\n",
-    "        \n",
+    "        (found, parent) = self.search(key) \n",
+    "        if found:\n",
+    "            return None\n",
+    "        else:\n",
+    "            return Node(key, parent)        \n",
     "        \n",
     "    # TODO: Complete algorithm to compute height of the tree\n",
     "    # height of a node whose children are both None is defined\n",
