complete height method

--- a/Course2ProblemSet1_Solutions.ipynb
+++ b/Course2ProblemSet1_Solutions.ipynb
@@ -113,7 +113,13 @@
     "    # Return a number that is th eheight.\n",
     "    def height(self):\n",
     "        # your code here\n",
-    "        \n",
+    "        left_height = 0\n",
+    "        right_height = 0\n",
+    "        if self.left != None:\n",
+    "            left_height = self.left.height()\n",
+    "        if self.right != None:\n",
+    "            right_height = self.right.height()  \n",
+    "        return 1 + max(left_height, right_height)        \n",
     "    \n",
     "    #TODO: Write an algorithm to delete a key in the tree.\n",
     "    # First, find the node in the tree with the key.\n",
