complete Course2Problemset2

--- a/Course2ProblemSet2_Solutions.ipynb
+++ b/Course2ProblemSet2_Solutions.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -212,8 +212,16 @@
     "        discovery_times[i] = dfs_timer.get()\n",
     "        dfs_timer.increment()\n",
     "        # your code here\n",
+    "        for j in self.get_neighboring_vertices(i):\n",
+    "            if discovery_times[j] == None:\n",
+    "                dfs_tree_parent[j] = i\n",
+    "                self.dfs_visit(j, dfs_timer, discovery_times, finish_times, dfs_tree_parent, dfs_back_edges)\n",
+    "            elif finish_times[j] == None:\n",
+    "                dfs_back_edges.append((i,j))\n",
+    "            \n",
+    "        finish_times[i] = dfs_timer.get()\n",
+    "        dfs_timer.increment()\n",
     "        \n",
-    "    \n",
     "    # Function: dfs_traverse_graph\n",
     "    # Traverse the entire graph.\n",
     "    def dfs_traverse_graph(self):\n",
@@ -236,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -252,7 +260,35 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DFS visit discovery and finish times given by your code.\n",
+      "Node\t Discovery\t Finish\n",
+      "0 \t 0\t\t 9\n",
+      "1 \t 1\t\t 2\n",
+      "2 \t 3\t\t 8\n",
+      "3 \t 4\t\t 7\n",
+      "4 \t 5\t\t 6\n",
+      "Success -- discovery and finish times seem correct.\n",
+      "\n",
+      "Node\t DFS-Tree-Parent\n",
+      "0 \t None\n",
+      "1 \t 0\n",
+      "2 \t 0\n",
+      "3 \t 2\n",
+      "4 \t 3\n",
+      "Success-- DFS parents are set correctly.\n",
+      "\n",
+      "Back edges are\n",
+      "(4, 0)\n",
+      "(4, 2)\n",
+      "Success -- 15 points!\n"
+     ]
+    }
+   ],
    "source": [
     "# create the graph from problem 1A.\n",
     "g = UndirectedGraph(5)\n",
@@ -359,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -377,12 +413,21 @@
    "source": [
     "def num_connected_components(g): # g is an UndirectedGraph class\n",
     "    # your code here\n",
+    "    dfs_tree_parents, non_trivial_back_edges, discovery_times, finish_times = g.dfs_traverse_graph()\n",
+    "    #lst = []\n",
+    "    #for i in range(len(dfs_tree_parents)):\n",
+    "    #    if dfs_tree_parents[i] == None:\n",
+    "    #        lst.append(i)\n",
+    "    #return len(lst)\n",
+    "    return len([i for i in dfs_tree_parents if i == None])\n",
+    "    \n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -398,7 +443,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success\n"
+     ]
+    }
+   ],
    "source": [
     "# create the graph from problem 1A.\n",
     "g = UndirectedGraph(5)\n",
@@ -437,7 +490,7 @@
     "\n",
     "g3.add_edge(7,5)\n",
     "assert num_connected_components(g3) == 2, f' Test D failed: g3 must now have 2 connected components. Your code returns {num_connected_components(g3)}'\n",
-    "\n"
+    "print('Success')\n"
    ]
   },
   {
@@ -482,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -501,13 +554,22 @@
     "def find_all_nodes_in_cycle(g): # g is an UndirectedGraph class\n",
     "    set_of_nodes = set()\n",
     "    # your code here\n",
+    "    dfs_tree_parents, non_trivial_back_edges, discovery_times, finish_times = g.dfs_traverse_graph()\n",
+    "    for (i, j) in non_trivial_back_edges:\n",
+    "        # Traverse the DFS tree from i to j and add all nodes in the path to the set\n",
+    "        while i != j:\n",
+    "            set_of_nodes.add(i)\n",
+    "            i = dfs_tree_parents[i]\n",
+    "        set_of_nodes.add(j)\n",
+    "    return set_of_nodes\n",
+    "\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -523,7 +585,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your code returns set of nodes: {0, 2, 3, 4}\n",
+      "Your code returns set of nodes: {0, 2, 3, 4, 5, 6, 7}\n",
+      "All tests passedd: 10 points!\n"
+     ]
+    }
+   ],
    "source": [
     "#this is the example that we had for the problem.\n",
     "g3 = UndirectedGraph(8)\n",
@@ -636,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
