update set2 and set3

--- a/Course2ProblemSet2_Solutions.ipynb
+++ b/Course2ProblemSet2_Solutions.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -554,7 +554,7 @@
     "def find_all_nodes_in_cycle(g): # g is an UndirectedGraph class\n",
     "    set_of_nodes = set()\n",
     "    # your code here\n",
-    "    dfs_tree_parents, non_trivial_back_edges, discovery_times, finish_times = g.dfs_traverse_graph()\n",
+    "    dfs_tree_parents, non_trivial_back_edges, _, _ = g.dfs_traverse_graph()\n",
     "    for (i, j) in non_trivial_back_edges:\n",
     "        # Traverse the DFS tree from i to j and add all nodes in the path to the set\n",
     "        while i != j:\n",
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
