update union method in Problem1

--- a/Course2ProblemSet3_Solutions.ipynb
+++ b/Course2ProblemSet3_Solutions.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -104,19 +104,26 @@
     "        # your code here\n",
     "        root1 = self.find(j1)\n",
     "        root2 = self.find(j2)\n",
-    "        if root1 != root2:\n",
-    "            if self.rank[root1] > self.rank[root2]:\n",
-    "                self.parents[root2] = root1\n",
-    "            else:\n",
-    "                self.parents[root1] = root2\n",
-    "                if self.rank[root1] == self.rank[root2]:\n",
-    "                    self.rank[root2] += 1\n",
-    "        "
+    "        #print(f\"j1: {j1} - root1: {root1}  - root1 rank: {self.rank[root1]}\")\n",
+    "        #print(f\"j2: {j2} root2: {root2} root2 rank: {self.rank[root2]}\")\n",
+    "        #print(f\"before union: {self.dictionary_of_sets()}\")\n",
+    "        if self.rank[root1] > self.rank[root2]:\n",
+    "            # assign root2 as the child of root1\n",
+    "            self.parents[root2] = root1\n",
+    "            self.rank[root1] += 1\n",
+    "        elif self.rank[root1] < self.rank[root2]:\n",
+    "            # assign root1 as the child of root2\n",
+    "            self.parents[root1] = root2\n",
+    "            self.rank[root2] += 1\n",
+    "        else:\n",
+    "            # tie-breaker assign root2 as the child of root2\n",
+    "            self.parents[root2] = root1\n",
+    "            self.rank[root1] += 1        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -143,14 +150,21 @@
    ],
    "source": [
     "d = DisjointForests(10)\n",
+    "#print(d.dictionary_of_sets())\n",
     "for i in range(10):\n",
     "    d.make_set(i)\n",
+    "\n",
+    "#print(d.dictionary_of_sets())\n",
     "\n",
     "for i in range(10):\n",
     "    assert d.find(i) == i, f'Failed: Find on {i} must return {i} back'\n",
     "    \n",
     "d.union(0,1)\n",
+    "#print(f\"after union {d.dictionary_of_sets()}\")\n",
+    "\n",
     "d.union(2,3)\n",
+    "#print(f\"after union {d.dictionary_of_sets()}\")\n",
+    "\n",
     "assert(d.find(0) == d.find(1)), '0 and 1 have been union-ed together'\n",
     "assert(d.find(2) == d.find(3)), '2 and 3 have been union-ed together'\n",
     "assert(d.find(0) != d.find(3)), '0 and 3 should be in  different trees'\n",
@@ -162,12 +176,17 @@
     "\n",
     "\n",
     "d.union(3,4)\n",
+    "#print(f\"after union {d.dictionary_of_sets()}\")\n",
     "assert(d.find(2) == d.find(4)), '2 and 4 must be in the same set in the family.'\n",
     "\n",
     "d.union(5,7)\n",
+    "#print(f\"after union {d.dictionary_of_sets()}\")\n",
     "d.union(6,8)\n",
+    "#print(f\"after union {d.dictionary_of_sets()}\")\n",
     "d.union(3,7)\n",
+    "#print(f\"after union {d.dictionary_of_sets()}\")\n",
     "d.union(0,6)\n",
+    "#print(f\"after union {d.dictionary_of_sets()}\")\n",
     "\n",
     "assert(d.find(6) == d.find(1)), '1 and 6 must be in the same set in the family'\n",
     "assert(d.find(7) == d.find(4)), '7 and 4 must be in the same set in the family'\n",
@@ -203,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -322,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -492,8 +511,8 @@
     "    mst_edges = []\n",
     "    g.sort_edges()\n",
     "    # your code here\n",
-    "    for i in range(g.n):\n",
-    "        d.make_set(i)\n",
+    "    #for i in range(g.n):\n",
+    "    #   d.make_set(i)\n",
     "    for i in range(len(g.edges)):\n",
     "        if d.find(g.edges[i][0]) != d.find(g.edges[i][1]):\n",
     "            d.union(g.edges[i][0], g.edges[i][1])\n",
