update computeShortestPath function

--- a/Course2ProblemSet4_Solutions.ipynb
+++ b/Course2ProblemSet4_Solutions.ipynb
@@ -616,9 +616,9 @@
     "def computeShortestPath( graph, source_coordinates, dest_coordinates):\n",
     "    # your code here\n",
     "    source = graph.get_vertex_from_coords(*source_coordinates)\n",
-    "    print(source)\n",
+    "    #print(source)\n",
     "    dest = graph.get_vertex_from_coords(*dest_coordinates)\n",
-    "    print(dest)    \n",
+    "    #print(dest)    \n",
     "    # Initialize an empty priority queue\n",
     "    q = PriorityQueue()\n",
     "        \n",
