--- a/Course2ProblemSet4_Solutions.ipynb
+++ b/Course2ProblemSet4_Solutions.ipynb
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -641,7 +641,8 @@
     "            \n",
     "        # Get the list of neighbors of the current vertex\n",
     "        neighbors = graph.get_list_of_neighbors(u)\n",
-    "            \n",
+    "        # print(neighbors)\n",
+    "        # Relax the edges of the current vertex\n",
     "        for v, w in neighbors:\n",
     "            if not v.processed and v.d > u.d + w:\n",
     "                # Update the distance of the neighbor vertex\n",
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -693,14 +694,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Vertex object at 0x0000023525E80790>\n",
-      "<__main__.Vertex object at 0x0000023526B2F100>\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8BE0>, 1.0), (<__main__.Vertex object at 0x0000023526AE8C70>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8BE0>, 1.0), (<__main__.Vertex object at 0x0000023526AE8C70>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8BE0>, 0.5), (<__main__.Vertex object at 0x0000023526AE8430>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8370>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8AF0>, 0.25), (<__main__.Vertex object at 0x0000023526AE8940>, 0.5), (<__main__.Vertex object at 0x0000023526AE81F0>, 1.2)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8AF0>, 0.25), (<__main__.Vertex object at 0x0000023526AE8940>, 0.5), (<__main__.Vertex object at 0x0000023526AE81F0>, 1.2)]\n",
       "[(0, 0), (1, 0), (1, 1), (2, 2)]\n",
-      "<__main__.Vertex object at 0x0000023525E80790>\n",
-      "<__main__.Vertex object at 0x0000023525E80670>\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8BE0>, 1.0), (<__main__.Vertex object at 0x0000023526AE8C70>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8BE0>, 1.0), (<__main__.Vertex object at 0x0000023526AE8C70>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8BE0>, 0.5), (<__main__.Vertex object at 0x0000023526AE8430>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8370>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8AF0>, 0.25), (<__main__.Vertex object at 0x0000023526AE8940>, 0.5), (<__main__.Vertex object at 0x0000023526AE81F0>, 1.2)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8AF0>, 0.25), (<__main__.Vertex object at 0x0000023526AE8940>, 0.5), (<__main__.Vertex object at 0x0000023526AE81F0>, 1.2)]\n",
+      "[]\n",
       "[(0, 0), (1, 0), (1, 1), (1, 2)]\n",
-      "<__main__.Vertex object at 0x0000023526B2F100>\n",
-      "<__main__.Vertex object at 0x0000023525E80790>\n",
+      "[(<__main__.Vertex object at 0x0000023526AE81F0>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE81F0>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8AF0>, 0.25), (<__main__.Vertex object at 0x0000023526AE8430>, 1.0)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8AF0>, 0.25), (<__main__.Vertex object at 0x0000023526AE8430>, 1.0)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8AF0>, 0.25), (<__main__.Vertex object at 0x0000023526AE8940>, 0.5), (<__main__.Vertex object at 0x0000023526AE81F0>, 1.2), (<__main__.Vertex object at 0x0000023526AE8BE0>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8AF0>, 0.25), (<__main__.Vertex object at 0x0000023526AE8940>, 0.5), (<__main__.Vertex object at 0x0000023526AE81F0>, 1.2), (<__main__.Vertex object at 0x0000023526AE8BE0>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8370>, 0.5)]\n",
+      "[(<__main__.Vertex object at 0x0000023526AE8AF0>, 0.25)]\n",
       "[(2, 2), (2, 1), (1, 1), (0, 1), (0, 0)]\n",
       "All tests passed: 15 points!\n"
      ]
