--- a/TakeHomeFinalC2V1.ipynb
+++ b/TakeHomeFinalC2V1.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -495,11 +495,12 @@
     "    \n",
     "    path = []\n",
     "    current = goal\n",
-    "\n",
+    "    print(f\"came_from: {came_from}\")\n",
     "    while current:  \n",
     "        path.append(current)\n",
     "        current = came_from[current]\n",
     "\n",
+    "    print(f\"reverse path: {path[::-1]}\")\n",
     "    return path[::-1]\n",
     "\n",
     "\n",
@@ -508,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -530,12 +531,18 @@
      "output_type": "stream",
      "text": [
       "-- Test 1 -- \n",
+      "came_from: {(0, 0): None, (1, 0): (0, 0), (0, 1): (0, 0), (2, 0): (1, 0), (3, 0): (2, 0), (2, 1): (2, 0), (3, 1): (3, 0), (3, 2): (3, 1), (3, 3): (3, 2)}\n",
+      "reverse path: [(0, 0), (1, 0), (2, 0), (3, 0), (3, 1), (3, 2), (3, 3)]\n",
       "[(0, 0), (1, 0), (2, 0), (3, 0), (3, 1), (3, 2), (3, 3)]\n",
       "-- Test 2 -- \n",
       "[]\n",
       "-- Test 3 -- \n",
+      "came_from: {(0, 0): None, (1, 0): (0, 0), (0, 1): (0, 0), (2, 0): (1, 0), (3, 0): (2, 0), (4, 0): (3, 0), (3, 1): (3, 0), (5, 0): (4, 0), (4, 1): (4, 0), (5, 1): (5, 0), (4, 2): (4, 1), (5, 2): (5, 1), (4, 3): (4, 2), (5, 3): (5, 2), (3, 3): (4, 3), (4, 4): (4, 3), (5, 4): (5, 3), (3, 4): (3, 3), (4, 5): (4, 4), (5, 5): (5, 4), (2, 4): (3, 4), (3, 5): (3, 4)}\n",
+      "reverse path: [(0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5)]\n",
       "[(0, 0), (1, 0), (2, 0), (3, 0), (4, 0), (5, 0), (5, 1), (5, 2), (5, 3), (5, 4), (5, 5)]\n",
       "-- Test 4 --\n",
+      "came_from: {(0, 0): None, (1, 0): (0, 0), (0, 1): (0, 0), (2, 0): (1, 0), (1, 1): (1, 0), (0, 2): (0, 1), (3, 0): (2, 0), (0, 3): (0, 2), (4, 0): (3, 0), (3, 1): (3, 0), (1, 3): (0, 3), (0, 4): (0, 3), (5, 0): (4, 0), (4, 1): (4, 0), (1, 4): (1, 3), (0, 5): (0, 4), (5, 1): (5, 0), (2, 4): (1, 4), (1, 5): (1, 4), (5, 2): (5, 1), (2, 5): (2, 4), (3, 5): (2, 5), (4, 5): (3, 5), (5, 5): (4, 5)}\n",
+      "reverse path: [(0, 0), (0, 1), (0, 2), (0, 3), (1, 3), (1, 4), (2, 4), (2, 5), (3, 5), (4, 5), (5, 5)]\n",
       "[(0, 0), (0, 1), (0, 2), (0, 3), (1, 3), (1, 4), (2, 4), (2, 5), (3, 5), (4, 5), (5, 5)]\n",
       "-- Test 5 --\n",
       "[]\n",
@@ -627,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
